--- a/index.html
+++ b/index.html
@@ -30,18 +30,16 @@
         <div class="bitmoji-container">
             <div class="bitmoji">
                 <img src="assests/bitmoji-left.png" alt="Bitmoji">
-                <p><span>IAGO</span><span> & </span><span>Lucca</span></p>
-                <p>from Sao Paulo, Brazil</p>
+                <img id="name" src="assests/Iago.png" alt="Name">
             </div>
             <div class="bitmoji">
                 <img src="assests/bitmoji-center.png" alt="Bitmoji">
-                <p><span>DANIEL</span><span> & </span><span>Jie Ying</span></p>
-                <p>from Kaula Lumpur, Malaysia</p>
+                <img id="name" src="assests/Daniel.png" alt="Name">
+
             </div>
             <div class="bitmoji">
                 <img src="assests/bitmoji-right.png" alt="Bitmoji">
-                <p><span>JOSH</span><span> & </span><span>REBECCA</span></p>
-                <p>from Los Angeles, USA</p>
+                <img id="name" src="assests/Jos.png" alt="Name">
             </div>
         </div>
         <a class="btn" href="#">WATCH NOW</a>
